[tool.black]
include = '\.pyi?$|^/devops$'
target_version = ["py38"]

[tool.poetry]
name = "kolga"
version = "3.0.0"
description = ""
authors = ["Anders Innovations <admin@anders.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^11.0"
colorful = "^0.5.4"
environs = "^7.0"
hvac = "^0.10.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.8"
pytest-dotenv = "^0.5.1"
pytest-sugar = "^0.9.2"
black = "=20.8b1"
flake8 = "^3.7"
isort = "^5.6"
mypy = "^0.790.0"
safety = "^1.8"
sphinx = "^3.0"
recommonmark = "^0.6.0"
sphinx-rtd-theme = "^0.5.0"
docstr-coverage = "^1.0"
markdown = "^3.1"
flake8-print = "^4.0"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
