[tool.black]
include = '\.pyi?$|^/devops$'
target_version = ["py38"]

[tool.poetry]
name = "kolga"
version = "3.0.0"
description = ""
authors = ["Anders Innovations <admin@anders.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^11.0"
colorful = "^0.5.4"
environs = "^7.0"
hvac = "^0.10.5"
pluggy = "^0.13.1"
slack_sdk = "^3.3.0"
sentry-sdk = "^0.19.5"
PyJWT = "^2.0.1"
cryptography = "^3.4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.8"
pytest-dotenv = "^0.5.1"
black = "=20.8b1"
flake8 = "^3.7"
isort = "^5.6"
mypy = "^0.790.0"
safety = "^1.8"
sphinx = "^3.0"
sphinx-rtd-theme = "^0.5.0"
docstr-coverage = "^1.4"
markdown = "^3.1"
flake8-print = "^4.0"
bandit = "^1.7.0"
myst-parser = "^0.13.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
