[tool.black]
include = '\.pyi?$|^/devops$'
target_version = ["py39"]

[tool.poetry]
name = "kolga"
version = "3.0.0"
description = ""
authors = ["Anders Innovations <admin@anders.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^19.15"
colorful = "^0.5.4"
environs = "^9.3"
hvac = "^0.11.0"
pluggy = "^1.0.0"
slack_sdk = "^3.3.0"
sentry-sdk = "^1.0.0"
PyJWT = "^2.0.1"
cryptography = "^35.0.0"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
pytest-dotenv = "^0.5.1"
black = "=21.9b0"
flake8 = "^4.0.1"
isort = "^5.9"
mypy = "^0.910"
safety = "^1.8"
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
docstr-coverage = "^2.1.1"
markdown = "^3.1"
flake8-print = "^4.0"
bandit = "^1.7.0"
myst-parser = "^0.15.2"
types-PyYAML = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
